--- a/sub_extension/manifest.json
+++ b/sub_extension/manifest.json
@@ -19,6 +19,7 @@
     {
       "js": [
         "/libs/jquery-3.5.1.min.js",
+        "src/content/bar.js",
         "/src/content/content.js"
       ],
       "matches": [
